fix horizontal scrolling + h5 color

--- a/css/visual-style-agence-mobile.css
+++ b/css/visual-style-agence-mobile.css
@@ -185,6 +185,10 @@ h3, h4 {
     margin-top: 0 !important;
 }
 
+h5, h5.like {
+    color: #001E60;
+}
+
 .hl-title {
     font-size: 1.7rem;
     font-family: "Poppins", sans-serif;
@@ -674,8 +678,6 @@ h3, h4 {
 
 .block-page{
     clear: both;
-    width: 100vw;
-
 }
 
 .block-page {
